[package]
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
description = "libdav1d bindings"
edition = "2021"
keywords = ["dav1d-rs","av1"]
license = "MIT"
name = "dav1d"
readme = "README.md"
repository = "https://github.com/rust-av/dav1d-rs"
version = "0.10.1"

[dependencies]
bitflags = "2"
dav1d-sys = { version = "0.8.1", path = "dav1d-sys" }

[features]

[workspace]
members = ["dav1d-sys", "tools"]
