[package]
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
description = "libdav1d bindings"
edition = "2021"
keywords = ["dav1d-rs", "av1"]
license = "MIT"
name = "dav1d"
readme = "README.md"
repository = "https://github.com/rust-av/dav1d-rs"
version = "0.10.3"

[dependencies]
bitflags = "2"
av-data = "0.4.2"
static_assertions = "1"
rav1d.workspace = true

[features]

[workspace]
members = ["rav1d", "print-ivf"]

[workspace.dependencies]
rav1d = { path = "rav1d", version = "1.0.0" }
