[package]
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
description = "libdav1d bindings"
edition = "2021"
keywords = ["dav1d-rs","av1"]
license = "MIT"
name = "dav1d"
readme = "README.md"
repository = "https://github.com/rust-av/dav1d-rs"
version = "0.10.4"

[dependencies]
bitflags = "2"
dav1d-sys = { version = "0.8.2", path = "dav1d-sys" }
av-data = "0.4.2"
static_assertions = "1"

[dev-dependencies]
bitstream-io = "4.0"

[features]

[workspace]
members = ["dav1d-sys", "tools"]
