[package]
name = "dav1d-sys"
version = "0.8.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to dav1d"
repository = "https://github.com/rust-av/dav1d-rs"
edition = "2021"

build = "build.rs"

[build-dependencies]
system-deps = "6.0"

[dependencies]
libc = "0.2"

[features]
v1_1 = []

[package.metadata.system-deps.dav1d]
name = "dav1d"
version = "1.0.0"

[package.metadata.system-deps.dav1d.v1_1]
version = "1.1.0"
