[package]
name = "dav1d-sys"
version = "0.8.2"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to dav1d"
repository = "https://github.com/rust-av/dav1d-rs"
edition = "2021"
readme = "../README.md"

build = "build.rs"

[build-dependencies]
system-deps = "7"

[dependencies]
libc = "0.2"

[features]

[package.metadata.system-deps.dav1d]
name = "dav1d"
version = "1.4.0"
